feat: implement basic oauth2 features